--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "vite build"
   },
   "dependencies": {
-    "sortablejs": "^1.12.0",
-    "vue": "^3.0.2"
+    "vue": "^3.0.2",
+    "vue-draggable-next": "^1.0.8",
+    "vuedraggable": "github:SortableJS/Vue.Draggable#vue-3"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.8",
